tests/res/traits/error_gives_twice.say
// Provide-once: the same trait given by two delegates is a collision.
trait Powered { pub fn start() { return "vroom"; } }
type Engine with Powered { init() {} }

type Car { // error: Trait 'Powered' appears in `gives` more than once; keep only one
    engine gives Powered;
    spare gives Powered;
    init() { this.engine = Engine(); this.spare = Engine(); }
}
